# 50blue

./: docker-compose.yml  nginx.conf
back/: .dockerignore  .gitignore  Dockerfile  dev.db  prod.db  pyproject.toml  requirements.txt  run.py
back/src/: main.py
back/src/api/: auth.py  root.py
back/src/api/crud/: drink.py  order.py  root.py  store.py  topping.py  user.py
back/src/api/v1/: root.py
back/src/auth/: index.py
back/src/crud/: index.py
back/src/db/: engine.py  fakeData.py
back/src/errorHandler/: index.py
back/src/middleware/: index.py
back/src/models/: __init__.py  base.py  drink.py  order.py  order_item.py  order_topping_table.py  store.py  topping.py  user.py
back/src/setting/: index.py
back/src/utils/: index.py
front/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/api/: auth.ts  index.ts
front/src/assets/: index.css
front/src/components/: alertContainer.vue  loading.vue  nav.vue
front/src/const/: index.ts
front/src/errorHandler/: index.ts
front/src/mock/: auth.ts  index.ts
front/src/pages/404/: index.vue
front/src/pages/createOrder/: index.vue
front/src/pages/drink/: index.vue
front/src/pages/login/: index.vue
front/src/pages/order/: index.vue  row.vue
front/src/pages/store/: index.vue
front/src/pages/topping/: index.vue
front/src/pages/user/: index.vue
front/src/router/: index.ts
front/src/store/: index.ts
front/src/utils/: index.ts
